Fix overflow scroll bars

--- a/assets/src/styles/main.css
+++ b/assets/src/styles/main.css
@@ -17,11 +17,9 @@ body > nav {
 
 body > aside {
   grid-column: 1;
-  scrollbar-gutter: stable;
 }
 
 body > main {
   grid-column: 2 / -1;
   padding-block: 0.5rem;
-  scrollbar-gutter: stable;
 }
